--- a/prepros-6.config
+++ b/prepros-6.config
@@ -27,7 +27,8 @@
         "styles/partials/_typography.scss",
         "styles/partials/_header.scss",
         "styles/partials/_main.scss",
-        "styles/partials/_footer.scss"
+        "styles/partials/_footer.scss",
+        "styles/partials/_button.scss"
       ]
     }
   ],
