header updates again, sorta got the flex working

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -24,6 +24,7 @@
       "path": "styles/style.scss",
       "imports": [
         "styles/partials/_setup.scss",
+        "styles/partials/_mixins.scss",
         "styles/partials/_typography.scss",
         "styles/partials/_header.scss",
         "styles/partials/_main.scss",
